# insect

./: .gitignore  README.md  build_cirsium_yolo_dataset.py  convert_insect3_to_tflite.py  detect_flower_roi.py  eval_insect3_classifier.py  flower_motion_insect3_record_pi.py  flower_motion_insect_record.py  flower_roi_live.py  local_augment_prepare.py  local_convert_tflite.py  local_preprocess.py  local_split_prepare.py  local_tflite_evaluate.py  local_train_cnn.py  pyproject.toml  train_cirsium_yolo.py  train_insect3_classifier.py  train_insect3_mobilenetv3.py  visit_event_detector_mobilenetv3_tflite.py
.github/workflows/: test.yml
analysis/: 00_export_ledger.py  01_validate_audit.py  02_observability_by_condition.py  README.md
configs/baselines/: motion_classifier.toml  motion_detector.toml  (+1 more)
docs/: CAUSAL_ATTRIBUTION_CONTRACT.md  ERROR_TAXONOMY.md  FIVE_RIG_DEPLOYMENT_DESIGN.md  FUNCTION_INVENTORY.md  IMX500_DEPLOYMENT.md  LATENT_BENCHMARK_EVALUATION.md  LATENT_DISTURBANCE_METHOD.md  LITERATURE_POSITION.md  METHODOLOGY_CONTRIBUTION.md  NOISEBENCH_PROTOCOL.md  NOISE_FIRST_METHOD.md  PREFIELD_VALIDATION.md  REPOSITORY_OVERVIEW.md  REVIEW_RESILIENT_VALIDATION.md  TARGET_ARCHITECTURE.md  TEMPORAL_NUISANCE_RISK_MODEL.md  TEMPORAL_RISK_EVALUATION.md  VISUAL_DISTURBANCE_BENCHMARK.md
legacy/: README.md
models/: README.md
tests/: test_baseline_config.py  test_causal_attribution.py  test_clock.py  test_domain.py  test_event_pipeline.py  test_event_segmenter.py  test_imx500_adapter.py  test_latent_benchmark_evaluation.py  test_latent_disturbance_benchmark.py  test_ledger.py  test_noise_first.py  test_noisebench_protocol.py  test_pre_field_benchmark.py  test_temporal_risk_benchmark.py  test_temporal_risk_evaluation.py  test_visual_disturbance_benchmark.py
(+73 files in other folders)
