[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "interaction-sensing"
version = "0.1.0"
description = "Error-aware target--actor interaction sensing for complex natural scenes"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "zuizui0223"}]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
runtime = ["opencv-python>=4.8"]
analysis = ["pandas>=2.0"]
models = ["ultralytics>=8.0", "tensorflow>=2.12"]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
